<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <dependencies>
        <!-- Dependencies -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <parent>
        <groupId>com.fasterxml</groupId>
        <artifactId>oss-parent</artifactId>
        <version>40</version>
    </parent>

    <groupId>io.github.cchacin</groupId>
    <artifactId>jackson-records</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Jackson + Java Records</name>
         
    <scm>
        <developerConnection>scm:git:git@github.com:cchacin/jackson-records.git</developerConnection>
        <connection>scm:git:git@github.com:cchacin/jackson-records.git</connection>
        <url>https://github.com/cchacin/jackson-records</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <maven.compiler.release>15</maven.compiler.release>

        <junit.version>5.7.1</junit.version>
        <assertj.version>3.19.0</assertj.version>
        <jackson.version>2.12.6.1</jackson.version>
             
        <tagNameFormat>v@{project.version}</tagNameFormat>
        <preparationGoals>clean compile test-compile</preparationGoals>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
